# pkdummy-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXCLUDED.csv  INDEX.csv  Makefile  README.ja.md  README.md  SECURITY.md  pk_library.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  external_tool_validation.yml  pk_data_correction.yml
.github/workflows/: ci.yml  codeql.yml  markdown-links.yml  package.yml  pages.yml
codex/prompts/: add_drug.md  audit_parser.md  regen_index_review.md
docs/: ACCEPTANCE_TEST.md  APP_DECISION.md  BASIS_WORKLIST_RESOLUTION.md  CALIBRATED_PROFILES.md  CODEX_HARNESS.md  DERIVED_DRIFT_DECISIONS.md  DOWNSTREAM_E2E.md  EXTERNAL_TOOL_VALIDATION_GUIDE.md  FIX_INSTRUCTIONS.md  HARVEST.md  LAUNCHER_CONTRACT.md  PROCESS_FLOW.md  QUICKSTART.md  READINESS_GAPS.md  RELEASE_NOTES_TEMPLATE.md  SCHEMA.md  SITE_ADAPTER_GUIDE.md  USER_GUIDE.md  USER_TEST_REPORT_TEMPLATE.md  VALIDATION_AND_RELEASE_CHECKLIST.md  WINDOWS_POWERSHELL.md  _config.yml  index.md
docs/assets/: pk-fixture-end-to-end-workflow.drawio  pk-harness-process.drawio
docs/releases/: v0.10.2.md  v0.10.3.md  v0.10.4.md
drugs/abciximab/: pk.yml  spec_pk1_iv.yml  targets.yml
drugs/aciclovir/: pk.yml  spec_pk1_oral.yml  targets.yml
drugs/albuterol/: pk.yml  spec_pk1_iv.yml  targets.yml
drugs/alfentanil/: pk.yml  spec_pk1_iv.yml  targets.yml
drugs/alprazolam/: pk.yml  spec_pk1_oral.yml  targets.yml
drugs/amikacin/: pk.yml  (+2 more)
external_validation/: site_adapter_template.yml  tool_profiles.windows.example.yml  tool_profiles.yml
harness_examples/: demo_set.yml  post_simulation_template.yml
jobs/: jobs_excluded22_v01.yml
jobs_examples/: jobs_template.yml
profiles/: aciclovir_oral_systemic_basis.yml  alprazolam_oral_systemic_basis.yml  cimetidine_oral_systemic_basis.yml  felodipine_oral_systemic_basis.yml  itraconazole_oral_systemic_basis.yml  montelukast_oral_systemic_basis.yml  omeprazole_oral_systemic_basis.yml  triazolam_oral_systemic_basis.yml  verapamil_oral_systemic_basis.yml
reports/: excluded_summary.md
scripts/: acceptance-check.ps1  harness-check.ps1  release-check.ps1
templates/: README.md  pk_fixture_reference.docx  pk_fixture_reference_source.qmd  pk_fixture_report.qmd
tests/: test_auc_unit_paths.py  test_audit_library_priorities.py  test_calibrated_profiles.py  test_check_derived_drift.py  test_check_examples.py  test_doctor.py  test_half_life_summary.py  test_library_basis_warning.py  test_library_integrity.py  test_make_analysis_inputs.py  test_make_downstream_adapters.py  test_make_sdtm_like_domains.py  test_make_site_adapters.py  test_nca_recalc_ground_truth.py  test_operational_readiness_pack.py  test_pk_extract.py  test_pk_fixture_cli.py  test_pk_units.py  test_render_manifest_viewer.py  test_render_pk_fixture_quarto_script.py  test_report_pk_fixture_script.py  test_repository_integrity.py  test_run_demo_set.py  test_run_downstream_smoke.py  test_run_external_tool_validation.py  test_run_harness.py  test_run_workflow.py  test_sample_clinical_timepoints.py  test_simpop_subjects_script.py  test_target_metadata.py  test_targets_metadata.py  test_template_gen.py  test_template_generation.py  test_validate_downstream_adapters.py  test_validate_harness_config.py  test_validate_manifest.py  test_validate_simulation.py  test_validate_subjects_csv.py  test_value_provenance.py  test_version_stamp.py  (+1 more)
tools/: __init__.py  audit_library_priorities.py  check_derived_drift.py  check_examples.py  check_markdown_links.py  check_value_provenance.py  codex_harness_check.py  dailymed.py  doctor.py  harvest_and_generate.py  make_analysis_inputs.py  make_calibrated_oral_spec.py  make_downstream_adapters.py  make_jobs_from_csv_v01.py  make_jobs_from_excluded.py  make_sdtm_like_domains.py  make_simpop_subjects.R  make_site_adapters.py  ncbi_eutils.py  pk_extract.py  pk_fixture_cli.py  pk_units.py  rebuild_index.py  regen_check.py  regen_derived.py  regen_index_check.py  render_manifest_viewer.py  render_pk_fixture_quarto.R  report_pk_fixture.R  run_demo_set.py  run_downstream_smoke.py  run_excluded22_flow.py  run_external_tool_validation.py  run_harness.py  run_workflow.py  sample_clinical_timepoints.py  summarize_excluded.py  target_metadata.py  template_gen.py  validate_downstream_adapters.py  (+5 more)
(+129 files in other folders)
