[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pkdummy-harness"
version = "0.10.1"
description = "Validation harness for PK-like SDTM/ADaM/NCA/PopPK workflow fixtures"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "pandas>=2.0",
  "requests>=2.31",
  "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pk-fixture = "tools.pk_fixture_cli:main"

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
