[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pkdummy-harness"
version = "0.10.4"
description = "Validation harness for PK-like SDTM/ADaM/NCA/PopPK workflow fixtures"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["pharmacokinetics", "sdtm", "adam", "nca", "poppk", "fixtures"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "PyYAML>=6.0",
  "pandas>=2.0",
  "requests>=2.31",
  "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pk-fixture = "tools.pk_fixture_cli:main"

[project.urls]
Homepage = "https://github.com/Y-Fukiya/pkdummy-harness"
Repository = "https://github.com/Y-Fukiya/pkdummy-harness"
Issues = "https://github.com/Y-Fukiya/pkdummy-harness/issues"

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
